--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -30,7 +30,7 @@ button
 .logo
   display: inline-block
   font-size: 0
-  +sm
+  +md
     width: 70px
     height: 102px
   +xs
@@ -65,19 +65,6 @@ button
   padding-right: 15px
   margin-left: auto
   margin-right: auto
-
-.yellow
-  color: $yellow !important
-.accent
-  color: $accent !important
-.overflow-hidden
-  overflow: hidden !important
-.bg-top-right
-  background-position: 100% 0% !important
-.bg-cover
-  background-size: cover !important
-.bg-center-center
-  background-position: 50% 50%
   
 .price
   +bold
