--- a/src/sass/_modificators.sass
+++ b/src/sass/_modificators.sass
@@ -1,2 +1,14 @@
 .overflow-hidden
   overflow: hidden
+.yellow
+  color: $yellow !important
+.accent
+  color: $accent !important
+.overflow-hidden
+  overflow: hidden !important
+.bg-top-right
+  background-position: 100% 0% !important
+.bg-cover
+  background-size: cover !important
+.bg-center-center
+  background-position: 50% 50%
