--- a/src/sass/_typo.sass
+++ b/src/sass/_typo.sass
@@ -25,6 +25,8 @@ h1, h2, h3, h4, h5, h6
   &--h3
     // font-size: 35px
     +css-lock(21, 35, 320, 1499, font-size)
+  &--h4
+    +css-lock(18, 24, 320, 1499, font-size)
   &--semi
     +semi
 
