--- a/src/sass/partials/_btn.sass
+++ b/src/sass/partials/_btn.sass
@@ -18,6 +18,14 @@
     padding: 10px
     min-width: 0
     width: 100%
+  .icon
+    font-size: 1.5em
+    vertical-align: middle
+    margin-left: .5em
+  .icon-facebook-circle
+    position: relative
+    top: -.1em
+    fill: #23599c
   
   &--transp
     border-color: currentColor
