--- a/src/sass/partials/_hero.sass
+++ b/src/sass/partials/_hero.sass
@@ -41,9 +41,12 @@
       font-size: 45px
       margin-right: 10px
       vertical-align: middle
+  &__breadcrumbs
+    @extend .main__breadcrumbs
+    padding-bottom: 0
 
 
-  .hero-slide
+  .hero-inner
     +cover
     +lg
       .container
