--- a/src/templates/partials/_hero.html
+++ b/src/templates/partials/_hero.html
@@ -1,46 +1,13 @@
 <!-- begin hero -->
 <section class="hero">
+  {% if hero.slider %}
   <!-- begin slider -->
   <div class="slider__wrap slider--hero__wrap">
     <div class="swiper-container js-slider" data-slider="hero">
       <div class="swiper-wrapper">
         {% for i in range(0, 3) %}
           <div class="swiper-slide">
-            <div class="hero-slide js-lazy" data-background-image="./img/hero-01.jpg">
-              <div class="container">
-                <div class="hero-slide__inner">                
-                  <div class="hero__content">
-                    <div class="hero__title js-anim-el" data-anim-name="fadeInLeft">
-                      <div class="title title--white">Сердце <em class="yellow">грузинской</em> кухни в Киеве </div>
-                    </div>
-
-                    <div class="hero__text js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.1s">Лучшая грузинская кухня в Киеве, главной приправой которой является
-                      наша любовь. Приходите к нам в ресторан или закажите кусочек
-                      настоящей грузинской заботы прямо к себе в дом!</div>
-
-                    <div class="hero__btns js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.2s">
-                      <div class="hero__btn">
-                        {{ mixins.btn(
-                          title = 'Заказать доставку',
-                          mod = ''
-                        ) }}
-                      </div>
-                      <div class="hero__btn">
-                        {{ mixins.btn(
-                          title = 'Хочу к вам в ресторан',
-                          mod = 'btn--transp btn--white-dark'
-                        ) }}
-                      </div>
-                    </div>
-
-                    <div class="hero__del js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.3s">
-                      {{ mixins.icon('delivery-truck') }}
-                      Бесплатная доставка при заказе <strong>от 1000 грн!</strong> (с 10:00 до 22:00)
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            {% include "partials/_hero-inner.html" %}
           </div>
         {% endfor %}
       </div>
@@ -51,9 +18,15 @@
     </div>
   </div>
   <!-- end slider -->
+  {% else %}
+  {% include "partials/_hero-inner.html" %}
+  {% endif %}
+  
 
-  <div class="section-img js-parallax-scene is-bottom is-left js-anim-el" data-anim-name="bounceInDown">
-    <img data-depth="0.1" data-src="./img/pngs/tomato.png" alt="" class="js-lazy">
-  </div>
+  {% if hero.img %}
+    <div class="section-img js-parallax-scene is-bottom is-left js-anim-el" data-anim-name="bounceInDown">
+      <img data-depth="0.1" data-src="./img/pngs/tomato.png" alt="" class="js-lazy">
+    </div>
+  {% endif %}
 </section>
 <!-- end hero -->
