--- a/src/templates/partials/sections/_s-hits.html
+++ b/src/templates/partials/sections/_s-hits.html
@@ -4,7 +4,7 @@
     <img data-src="./img/bg-layer.png" alt="" class="js-lazy">
   </div>
   <div class="container">
-    <div class="section__title js-anim-el" data-anim-name="fadeInLeft">
+    <div class="section__title section__title-mb js-anim-el" data-anim-name="fadeInLeft">
       <h2 class="title title--white">Хиты продаж:</h2>
     </div>
   </div>
