--- a/src/templates/partials/sections/_s-vine.html
+++ b/src/templates/partials/sections/_s-vine.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="container">
-    <div class="section__title section-title js-anim-el" data-anim-name="fadeInLeft">
+    <div class="section__title section__title-mb-lg section-title js-anim-el" data-anim-name="fadeInLeft">
       <div class="section-title__title">
           <h2 class="title">Мы знаем, что такое  настоящее <em class="accent">грузинское вино</em></h2>
       </div>
