--- a/src/templates/icons/_border.html
+++ b/src/templates/icons/_border.html
@@ -1,3 +1,3 @@
-<svg height="1em" preserveAspectRatio="none" width="3.251em" class="icon icon-border">
+<svg height="1em" preserveAspectRatio="none" width="3.251em" viewBox="0 0 291 89.518" class="icon icon-border">
     <path d="M45 0C20.07 0 0 20.07 0 45c0 .248.016.492.02.738.33-.057.66-.12.994-.17C1.01 45.378 1 45.191 1 45 1 20.624 20.624 1 45 1h.129c-.004-.229-.018-.456-.018-.686 0-.105.007-.209.008-.314zm245.982 44.293c-.29.006-.579.021-.87.021h-.13c.003.23.018.456.018.686 0 22.137-16.185 40.352-37.416 43.512.002.19.014.379.014.57 0 .146-.01.29-.012.436C274.371 86.348 291 67.69 291 45c0-.237-.014-.47-.018-.707z"/>
 </svg>
