--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -109,6 +109,8 @@
       </div>
     </div>
   </div>
+
+  {% if header.marquee %}
   <div class="header__marquee">
     <!-- begin marquee -->
     <div class="marquee">
@@ -116,5 +118,6 @@
     </div>
     <!-- end marquee -->
   </div>
+  {% endif %}
 </header>
 <!-- end header -->
