--- a/src/sass/partials/_all.sass
+++ b/src/sass/partials/_all.sass
@@ -16,3 +16,11 @@
 @import animations
 @import testimonials
 @import zone-block
+@import pay-methods
+@import order
+@import form
+@import radio
+@import banner
+@import cart
+@import popup
+@import hoods
