--- a/src/sass/partials/_zone-block.sass
+++ b/src/sass/partials/_zone-block.sass
@@ -2,8 +2,8 @@
   +cover
   // +flex(flex-start, center)
   border-radius: 15px
-  padding-top: 150px
-  padding-bottom: 125px
+  // padding-top: 150px
+  // padding-bottom: 125px
   padding-left: 40px
   padding-right: 15px
   position: relative
@@ -13,6 +13,12 @@
     +coverdiv
     z-index: -1
     border-radius: 15px
+  +lg
+    padding-left: 30px
+  +md
+    padding-left: 20px
+  +sm
+    padding-left: 15px
 
   &__content
     max-width: 530px
