--- a/src/templates/delivery.html
+++ b/src/templates/delivery.html
@@ -1,7 +1,6 @@
 ---
-title: about
-page: about
-
+title: delivery
+page: delivery
 ---
 {% extends "layouts/_layout.html" %}
 
@@ -28,6 +27,9 @@ page: about
   
   {% include "partials/_hero.html" %}
   {% include "partials/sections/_s-zone.html" %}
+  {% include "partials/sections/_s-pay.html" %}
+  {% include "partials/sections/_s-order-del.html" %}
+  {% include "partials/sections/_s-contacts.html" %}
 {% endblock %}
 
 
