--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -43,8 +43,8 @@
           <div class="footer__title">Наши рестораны</div>
 
           {{ mixins.list(
-            name = 'nav',
-            modifications = { wrap: 'nav--footer', item: '', link: '' },
+            name = '',
+            modifications = { wrap: 'nav nav--footer', item: '', link: '' },
             list = [
               { item: 'Киев, Строителей, 34/1' },
               { item: 'Киев, Броварской проспект 3А' },
