--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -21,6 +21,8 @@ button
   font-size: inherit
   font-family: inherit
   color: inherit
+  overflow: visible
+  background-color: transparent
 
 .icon
   display: inline-block
@@ -37,9 +39,9 @@ button
     width: 50px
     height: 73px
 
-// .anim-img
-[data-loaded="true"]  
-  animation: fadeIn 1s
+.lazy
+  &.is-loaded 
+    animation: fadeIn 1s
 
 .main  
   &__breadcrumbs
@@ -53,11 +55,8 @@ button
       padding-top: 40px
     +xss
       padding-bottom: 10px
-  &--noise
-    +image('noisy.png')
-    background-color: $black
-    background-repeat: repeat
-    background-size: auto
+  &--noisy
+    @extend .section--noisy
 
 .container
   max-width: 1440px
@@ -85,6 +84,12 @@ button
       font-size: 30px
     +md
       font-size: 26px
+  &--lg
+    font-size: 40px
+    +lg
+      font-size: 32px
+    +md
+      font-size: 28px
   &--old
     position: relative
     +after
@@ -95,6 +100,11 @@ button
       position: absolute
       height: 1px
       background-color: currentColor
+
+.amount
+  // +light
+  font-size: 13px
+  color: $gray-light
 
 .counter
   $this: &
@@ -197,6 +207,21 @@ button
     padding-top: 40%
   +xs
     padding-top: 40%
+
+.reccomend
+  padding-top: 85px
+  +xl
+    padding-top: 70px
+  +lg
+    padding-top: 60px
+  +md
+    padding-top: 50px
+  +sm
+    padding-top: 30px
+  +xs 
+    padding-top: 20px
+  &__title
+    margin-bottom: 50px
 
 @keyframes fadeIn
   0%
