--- a/src/sass/partials/_section.sass
+++ b/src/sass/partials/_section.sass
@@ -34,7 +34,7 @@
     +md
       margin-bottom: 30px
     +sm
-      margin-bottom: 15px
+      margin-bottom: 15px  
   &__title-mb-sm
     margin-bottom: 30px
   &__slider
@@ -62,8 +62,24 @@
     img
       transform: scaleY(-1)
     +before
-      top: 45px
+      top: 30px
       bottom: 0
+  &__center
+    max-width: 750px
+    margin-left: auto
+    margin-right: auto
+    +flex
+    +xs
+      display: block
+      text-align: center
+      img
+        max-width: 50%
+  &__center-content
+    +flex(center, normal, column)
+  &__center-btn
+    max-width: 285px
+    +xs
+      max-width: none
   &--black
     background-color: $black
   &--noisy-white
@@ -71,6 +87,11 @@
     +image('noisy-white.png')
     background-size: auto !important
     background-repeat: repeat
+  &--noisy
+    +image('noisy.png')
+    background-color: $black
+    background-repeat: repeat
+    background-size: auto
   &--download
     &__inner
       +flex(flex-start, normal, row, wrap)
@@ -135,6 +156,9 @@
     +lg
       transform: translate(0, 0)
       // margin-top: -1em
+    img
+      display: inline-block
+      vertical-align: middle
   
   &--light
     #{$this}__title
@@ -143,6 +167,8 @@
     text-align: center
     #{$this}__title
       display: inline-block
+  &--625
+    max-width: 625px
 
 .s-hits
   .section__layer
@@ -231,21 +257,9 @@
       +md
         display: none
 
-.s-item
-  &__title
-    margin-bottom: 50px
-  &__item
-    margin-bottom: 85px
-    +xl
-      margin-bottom: 70px
-    +lg
-      margin-bottom: 60px
-    +md
-      margin-bottom: 50px
-    +sm
-      margin-bottom: 30px
-    +xs 
-      margin-bottom: 20px
+// .s-item
+//   &__item
+    
 
 .s-menu
   position: relative
@@ -332,6 +346,15 @@
     left: 0
     z-index: 0
     background-image: linear-gradient(to bottom, $white, rgba($white, 0))
-    height: 50%
+    height: 70%
   &__block
     width: percentage(9/12)
+    +lg
+      width: percentage(10/12)
+    +md
+      width: auto
+
+.s-pay
+  +md
+    background-size: 20%
+
