--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,6 +7,9 @@ header: {
 sectionGallery: {
   img: true
 }
+sectionContacts: {
+  img: true
+}
 ---
 {% extends "layouts/_layout.html" %}
 {% block content %}
