--- a/src/templates/one-item.html
+++ b/src/templates/one-item.html
@@ -1,7 +1,7 @@
 ---
 title: one-item
 page: one-item
-mainClass: main--noise
+mainClass: main--noisy
 breadcrumbs: {
   list: [
     { link: 'Главная' },
@@ -12,7 +12,7 @@ breadcrumbs: {
     { item: '-' },
     { link: 'Форель на мангале', modLink: 'is-active' }
   ],
-  link: true
+  link: К меню
 }
 slider: {
   slider: [
