--- a/src/templates/partials/sections/_s-about.html
+++ b/src/templates/partials/sections/_s-about.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- begin about -->
-    <div class="about">
+    <div class="about about--compl">
       <!-- begin about-block -->
       <div class="about-block">
           <div class="about-block__img js-lazy" data-background-image="./img/about/01.jpg"></div>
@@ -70,7 +70,7 @@
       <!-- end about-block -->
 
       <!-- begin about-block -->
-      <div class="about-block">
+      <div class="about-block about-block--quote">
         <div class="about-block__quote quote js-anim-el" data-anim-name="fadeInLeftCenter">
           <p>В 1600 году один из зарубежных путешественников, посетивших Грузию писал:
               “Нет такой второй страны, где пьют лучшее вино. Крестьяне выдалбливают
