--- a/src/sass/_typo.sass
+++ b/src/sass/_typo.sass
@@ -29,6 +29,8 @@ h1, h2, h3, h4, h5, h6
     +css-lock(18, 24, 320, 1499, font-size)
   &--semi
     +semi
+  &--ttn
+    text-transform: none
 
 .h1, h1
 
