--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -63,6 +63,8 @@
             </span>
           </a>
           <!-- end header-cart -->
+
+          {% include "partials/_cart-tooltip.html" %}
         </div>
 
         <div class="header__burger">
