--- a/src/templates/partials/sections/_s-contacts.html
+++ b/src/templates/partials/sections/_s-contacts.html
@@ -77,7 +77,7 @@ tabs = [
                 </div>
               </div>
 
-              <div class="contacts__img anim-img js-lazy" data-background-image="./img/contacts/01.jpg"></div>
+              <div class="contacts__content js-lazy" data-background-image="./img/contacts/01.jpg"></div>
             </div>
             <!-- end contacts -->
           </div>
